@@ -1,6 +1,8 @@
 Copyright (C) 2017 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_080817_4 - Fix error in curate mode introduced in saw_080817_1.
+
 saw_080817_3 - Exclude posts with 'boiled' tag.
 
 saw_080817_2 - Allow other tags to be present in original timely posts.
